--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,281 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./output.css">
   <title>books</title>
 </head>
 
-<body>
+<body class="body box-border">
+
+  <header class="header  border-b border-b-[#E5E5E5]">
+    <div class="container mx-auto pt-[15px] pb-[11px] flex justify-between items-center ">
+
+      <a class="" href="#">
+        <img src="../images/logo.svg" width="226" height="44" alt="site logo">
+      </a>
+
+      <input type="text" placeholder="Search books"
+        class="header__search max-w-[670px] p-[15px] rounded-[30px] w-full placeholder:font-normal placeholder:text-[13px] placeholder:leading-[15px] placeholder:text-[#bcbec0] outline-none bg-[#F8FAFD]">
+
+      <div class="log align-middle">
+
+        <button
+          class="px-[23px] py-[11px] rounded-[3px] text-normal text-[16px] leading-[16px] text-[#fff] bg-[#0D75FF]">Logout</button>
+
+      </div>
+
+
+    </div>
+  </header>
+
+  <main class="main">
+
+    <!-- ! RESULT -->
+    <section class="result  border-b border-b-[#E5E5E5]">
+      <div class="container mx-auto py-[11px] flex items-center justify-between">
+
+        <span></span>
+
+        <p class="result__desc text-[14px] font-medium leading-[17px]">Showing 18 Result(s)</p>
+
+        <span></span>
+
+        <button class="py-[5px] px-[13px] rounded-[4px] text-[#fff] bg-[#A6B0C3]">Order by newest</button>
+
+      </div>
+    </section>
+
+    <!-- ! BOOKS -->
+    <section class="books">
+      <div class="container mx-auto flex ">
+
+        <div class="books__bookmark max-w-[286px] w-full p-[25px]">
+
+          <h2 class="bookmark-title pb-[10px] text-[24px] leading-[28px] font-medium">Bookmark</h2>
+          <p class="bookmark-desc  text-[14px] font-normal leading-[155%]">If you don’t like to read, you haven’t found
+            the right book</p>
+
+          <ul class="bookmar-list mt-[25px]">
+
+            <li class="bookmark-item mb-[15px] px-[10px] py-[15px] flex justify-between rounded-[4px] bg-[#f8fafd]">
+
+              <div class="bookmark-text">
+                <h3 class="bookmark-title text-[16px] leading-[19px] font-medium">Python</h3>
+                <p class="bookmark-owner text-[13px] leading-[18px] font-normal text-[#757881]">David M. Beazley</p>
+              </div>
+
+              <div class="bookmark-btn flex">
+                <button class="bookmark-read mr-[5px]">
+                  <img src="../images/read-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+                <button class="bookmark-remove">
+                  <img src="../images/remove-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+              </div>
+            </li>
+
+            <li class="bookmark-item mb-[15px] px-[10px] py-[15px] flex justify-between rounded-[4px] bg-[#f8fafd]">
+
+              <div class="bookmark-text">
+                <h3 class="bookmark-title text-[16px] leading-[19px] font-medium">Python</h3>
+                <p class="bookmark-owner text-[13px] leading-[18px] font-normal text-[#757881]">David M. Beazley</p>
+              </div>
+
+              <div class="bookmark-btn flex">
+                <button class="bookmark-read mr-[5px]">
+                  <img src="../images/read-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+                <button class="bookmark-remove">
+                  <img src="../images/remove-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+              </div>
+            </li>
+
+            <li class="bookmark-item mb-[15px] px-[10px] py-[15px] flex justify-between rounded-[4px] bg-[#f8fafd]">
+
+              <div class="bookmark-text">
+                <h3 class="bookmark-title text-[16px] leading-[19px] font-medium">Python</h3>
+                <p class="bookmark-owner text-[13px] leading-[18px] font-normal text-[#757881]">David M. Beazley</p>
+              </div>
+
+              <div class="bookmark-btn flex">
+                <button class="bookmark-read mr-[5px]">
+                  <img src="../images/read-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+                <button class="bookmark-remove">
+                  <img src="../images/remove-icon.png" width="24" height="24" alt="reading icon">
+                </button>
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+
+
+        <div class="books-box  p-[40px] bg-[#f8fafd]">
+
+          <ul class="books__list grid grid-cols-3 gap-[33px] w-full">
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
+
+              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
+                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
+              </div>
+
+              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
+              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
+              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
+
+
+              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
+                <button
+                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
+                <button
+                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
+                  Info</button>
+                <button
+                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
+              </div>
+
+            </li>
+
+          </ul>
+
+          <div class="books__pages flex items-center">
+
+            <button class="back_btn">
+              <img src="../images/back.png" width="32" height="32" alt="back icon">
+            </button>
+
+            <div class="books__allPages"></div>
+
+            <button class="next_btn">
+              <img src="../images/next.png" width="32" height="32" alt="next icon">
+            </button>
+
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+  </main>
 
   <script src="./app.js"></script>
 </body>
