--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,10 @@
 
     <!-- ! BOOKS -->
     <section class="books">
-      <div class="container mx-auto flex ">
+      <div class="container mx-auto flex bg-[#f8fafd]">
 
-        <div class="books__bookmark max-w-[286px] w-full p-[25px]">
+        <!-- !BOOKMARK -->
+        <div class="books__bookmark max-w-[286px] w-full p-[25px] bg-[#fff] shadow-[ 0px 3px 2px rgba(0, 0, 0, 0.1]">
 
           <h2 class="bookmark-title pb-[10px] text-[24px] leading-[28px] font-medium">Bookmark</h2>
           <p class="bookmark-desc  text-[14px] font-normal leading-[155%]">If you don’t like to read, you haven’t found
@@ -118,147 +119,12 @@
         </div>
 
 
+        <!-- ! BOOKS list -->
         <div class="books-box  p-[40px] bg-[#f8fafd]">
 
           <ul class="books__list grid grid-cols-3 gap-[33px] w-full">
 
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
 
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
-
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
-
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
-
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
-
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
-
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
-
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
-
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
-
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
-
-            <li class="books__item max-w-[282px] pl-[18px] py-[13px] pr-[15px] rounded-[5px] bg-[#fff]">
-
-              <div class="item-img py-[18px] px-[24px] rounded-[5px] bg-[#f8fafd]">
-                <img class="rounded-[5px]" src="../images/book.png" width="201" height="202" alt="book image">
-              </div>
-
-              <h3 class="item-title mt-[19px] text-[18px] leadind-[21px] font-medium">Python</h3>
-              <p class="item-owner text-[13px] leadind-[21px] font-medium text-[#757881]">David M. Beazley</p>
-              <p class="item-year text-[13px] leadind-[21px] font-medium text-[#757881]">2009</p>
-
-
-              <div class="books__btn grid grid-cols-2 grid-rows-2 gap-[5px]">
-                <button
-                  class="books-bookmark py-[10px] px-[26px] rounded-[4px] bg-[#FFD80D] text-[14px] leading-[17px] font-medium">Bookmark</button>
-                <button
-                  class="books-moreInfo py-[10px] px-[26px] rounded-[4px] bg-[#f3f8ff] text-[14px] leading-[17px] font-medium text-[#3f75ff]">More
-                  Info</button>
-                <button
-                  class="books-read col-span-2 rounded-[4px] bg-[#75828A] text-[14px] leading-[17px] font-medium text-[#fff]">Read</button>
-              </div>
-
-            </li>
 
           </ul>
 
