feat: add login page

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <title>books</title>
 </head>
 
-<body class="body box-border snap-none">
+<body class="body box-border snap-none bg-white">
 
   <header class="header border-b border-b-[#E5E5E5]">
     <div class="container relative mx-auto pt-[15px] pb-[11px] flex justify-between items-center ">
@@ -37,7 +37,7 @@
       <div class="log align-middle">
 
         <button
-          class="px-[23px] py-[11px] rounded-[3px] text-normal text-[16px] leading-[16px] text-[#fff] bg-[#0D75FF]">Logout</button>
+          class="logout-btn px-[23px] py-[11px] rounded-[3px] text-normal text-[16px] leading-[16px] text-[#fff] bg-[#0D75FF]">Logout</button>
 
       </div>
 
