--- a/src/login.html
+++ b/src/login.html
@@ -30,7 +30,7 @@
           type="password" name="password" required placeholder="PASSWORD">
       </div>
 
-      <button
+      <button type="submit"
         class=" mt-[43px] w-[300px] h-[45px] border border-white rounded-[4px] bg-white text-[16px] leading-[20px] text-[#0D75FF] font-[600]">Login</button>
 
     </form>
